[package]
name = "mio_playground"
version = "0.1.0"
authors = ["Viktor Jancik <viktor.vix.jancik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
cfg-if = "1.0.0"
mio = { version = "0.7.7", features = ["os-poll", "net"] }
num_cpus = "1.13.0"
parking_lot = "0.11.1"
smallvec = "1.6.1"
socket2 = { version = "0.3.19", features = ["reuseport"] }
